name:                connect-four
version:             0.0.0.35
license:             MIT
license-file:        LICENSE
author:              Twan Coenraad
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  build-depends:       base >=4.7 && <4.8, hspec >=2.1 && <2.2
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite spec
  type: exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base >=4.7 && <4.8, hspec >=2.1 && <2.2
  hs-source-dirs:      src
  default-language:    Haskell2010