name:                connect-four
version:             0.0.0.35
license:             MIT
license-file:        LICENSE
author:              Twan Coenraad
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

Data-Dir: resources

Executable server
  default-language: Haskell2010
  build-depends:
    async,
    base,
    containers,
    engine-io,
    engine-io-snap,
    hspec,
    mtl,
    network,
    snap-core,
    snap-server,
    split,
    stm,
    text,
    uuid,
    transformers
  main-is: Main.hs
  ghc-options: -Wall -O2 -threaded
  hs-source-dirs: src

test-suite spec
  type: exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base >=4.7, hspec >=2.1
  hs-source-dirs:      src
  default-language:    Haskell2010