name:                connect-four
version:             0.0.0.35
license:             MIT
license-file:        LICENSE
author:              Twan Coenraad
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.18.0.0

Data-Dir: resources

Executable server
  default-language: Haskell2010
  build-depends:
    aeson,
    async,
    base,
    bytestring,
    containers,
    engine-io,
    engine-io-snap,
    hspec,
    MissingH,
    mtl,
    network,
    snap-core,
    snap-server,
    split,
    stm,
    text,
    uuid,
    transformers
  main-is: Main.hs
  ghc-options: -Wall -O2 -threaded
  hs-source-dirs: src
  default-language: Haskell2010

test-suite spec
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs
  build-depends:
    aeson >=0.8.0.2,
    base >=4.7,
    hspec >=2.1
  hs-source-dirs: src
  default-language: Haskell2010
